--- a/themes/krimdok2/scss/overrides.scss
+++ b/themes/krimdok2/scss/overrides.scss
@@ -487,3 +487,7 @@ a:hover {
 #tf-button-footer-feedback, nav.breadcrumbs {
     display: none;
 }
+
+.searchForm {
+    margin-bottom: 0;
+}
